...
) {
    TopAppBar(
        title = { Text("Timber", style = MaterialTheme.typography.headlineSmall) },
        actions = {
            IconButton(
                onClick = onIconClick,
                modifier = Modifier.testTag("TimberAppLogo")
            ) {
                Image(
                    painter = painterResource(id = R.drawable.timberlogo),
                    contentDescription = "App Logo",
                    modifier = Modifier
                        .size(48.dp)
...
